style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    min-height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
    font-family: Roboto, sans-serif;
}

header,
.hero {
    background-color: #1f2937;
    padding: 0 15%;
}

header {
    padding-top: 12px;
    padding-bottom: 12px;
    display: flex;
    gap: 24px;
}

.headertext {
    font-size: 24px;
    color: #F9FAF8;
}

.headerlink {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.headerlink.link1 {
    margin-left: auto;
}

.hero {
    display: flex;
    padding-top: 48px;
    padding-bottom: 48px;
}

.hero > * {
    flex: 1;
}

.heroimage {
    background-color: lightgray;

}

